# space_game

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: cli.rs  main.rs
src/dots/: constants.rs  main.rs  mod.rs  movement.rs
src/life/: main.rs
